[project]
name = "intelligent-character-recognition"
version = "0.1.0"
description = "icr"
authors = [
    {name = "me"}
]
license = {text = "no"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "tensorflow (>=2.21.0,<3.0.0)",
    "keras (>=3.15.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
