[project]
name = "intelligent-character-recognition"
version = "0.1.0"
description = "icr"
authors = [
    {name = "me"}
]
license = {text = "no"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "tensorflow (>=2.21.0,<3.0.0)",
    "keras (>=3.15.0,<4.0.0)",
    "tensorflow-datasets (>=4.9.10,<5.0.0)",
    "importlib-resources (>=7.1.0,<8.0.0)",
    "streamlit-drawable-canvas (>=0.9.3,<0.10.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "plotly (>=6.8.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
